<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/poster_iv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/movie_tittle_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/movie_tittle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster_iv" />
    <TextView
        android:id="@+id/overview_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/overview_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/movie_tittle_tv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/overView_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_overview"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_id" />
    <TextView
        android:id="@+id/user_rate_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_rate_text"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/overView_tv"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/user_rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_rate"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/user_rate_id"
        app:layout_constraintTop_toBottomOf="@+id/overView_tv" />
    <TextView
        android:id="@+id/release_data_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date_text"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_rate_id"
        />

    <TextView
        android:id="@+id/release_date_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
       android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/release_data"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/release_data_id"
        app:layout_constraintTop_toBottomOf="@+id/user_rate_id" />




</android.support.constraint.ConstraintLayout>